# internal/server/http.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "github.com/toheart/goanalysis/api/helloworld/v1"
+	v1 "github.com/toheart/goanalysis/api/analysis/v1"
 	"github.com/toheart/goanalysis/internal/conf"
 	"github.com/toheart/goanalysis/internal/service"
 
@@ -10,14 +10,20 @@ import (
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
+	"github.com/gorilla/handlers"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, analysis *service.AnalysisService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
 		),
+		http.Filter(handlers.CORS(
+			handlers.AllowedOrigins([]string{"*"}),
+			handlers.AllowedMethods([]string{"GET", "POST", "OPTIONS"}),
+			handlers.AllowedHeaders([]string{"Content-Type", "Authorization"}),
+		)),
 	}
 	if c.Http.Network != "" {
 		opts = append(opts, http.Network(c.Http.Network))
@@ -33,6 +39,6 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	// Serve static files from the "static" directory
 	srv.Handle("/static/", nhttp.StripPrefix("/static/", nhttp.FileServer(nhttp.Dir("static"))))
 
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterAnalysisHTTPServer(srv, analysis)
 	return srv
 }
